Issue #000 fix: java 11 upgrade fix.